Allow for different class names